# HorizCoin

./: .copilot-spaces.json  .dockerignore  .env 2  .env O  .env.example  .gitignore  1. README.md 3  AI Studio Google  AI completion  AI-Cloud-Orchestrator  API version  B 1  B 10  B 11  B 12  B 13  B 14  B 15  B 2  B 3  B 6  B 7  B 8  B 9  Bondingcurve  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Curve sol  DEPLOYMENT.md  Dockerfile  Doctor  Example modules (one for each surface — all identical logic)  Exchange O  Exchange wrapper  ExploitRouter.sol  ExploitRouter_V2.sol 1  FINAL_NOTE.md  FP 1  FP 2  (+183 more)
. contracts/migration/: README.md
. ledger/: tigerbeetle_client.py
. ledger/. payments/: pacs008_generator.py
. ledger/. payments/payments/: camt053_reconciler.py
.github/: Foundation
.github/workflows/: Foundation  ci.yml  deploy-lightsail.yml  deploy.yml  ephemeral-preview.yml  invariants.yml  sbom.yml
Dockerfile (for containerized daemon/: Updated horizcoin_core.py (with better logging & metrics endpoint)  docker-compose.yml (run daemon + x402 server together  server)
Repository Root Structure (create these files/: Lunch  README.md (full final version)  Run step  Test  folders)  horizcoin_setup.sh
Repository Root Structure (create these files/horizcoin_core.py (enforces $100T/: year)
Repository Root Structure (create these files/horizcoin_core.py (enforces $100T/docs/: REVENUE_100_TRILLION.md
app/: next.config.mjs  package.json
app/prisma/: schema.prisma
backend/: package.json
backend/api/: server.ts
bins/: FINAL.md  STATUS.md
bins/horiz-cli/: Cargo.toml  README.md
bins/horiz-cli/src/: main.rs
bins/node/: Cargo.toml  README.md
bins/node/src/: main.rs
bins/server/: Cargo.toml
bins/server/src/: main.rs
bins/web/: Cargo.toml
bins/web/src/: main.rs
cmd/horizcoin/: main.go
config/: Information GIC  addresses.example.json  intent_mandate.json GIC
config/env/: .env.example
contracts/: .env  ExploitRouter.sol  HorizcoinSettlement.sol  OmegaConquestTreasury.sol  OmegaConquestTreasury.sol O  OmegaConquestTreasury.sol Ownership  Other source files (summary – use the final versions from our previous messages)  PocVault.sol 3  PocVault.sol 4  README-Conquest.md  README.md  foundry.toml  hardhat.config.js  package.json 5
contracts/README-Conquest.md (final version — add/: replace in repo root or docs folder)
contracts/contracts/: AtomicMSLORouter.sol
contracts/contracts/interfaces/: IAaveInterfaces.sol
contracts/docs/: REVENUE_100_TRILLION.md
contracts/docs/docs/: FINAL_STATUS.md  Information F
contracts/hqlo/: README.md
contracts/scripts/: deploy_omega_treasury.js  deployment_script.js
contracts/scripts/test/: OmegaConquestTreasury.test.js  README-Conquest.md  test_exploit.js
contracts/src/governance/: HorizGovernor.sol  HorizTimelock.sol
contracts/src/token/: HorizCoinToken.sol
contracts/test/: Governance.t.sol  Token.t.sol
crates/: ai_coordinator
crates/block/: Cargo.toml  README.md
crates/block/src/: lib.rs
crates/codec/: Cargo.toml  README.md
crates/codec/src/: lib.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: lib.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs
crates/mempool/: Cargo.toml  README.md
crates/mempool/src/: lib.rs
crates/merkle/: Cargo.toml  README.md
crates/merkle/src/: lib.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs
crates/state/: Cargo.toml  README.md
crates/state/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs
crates/testutil/: Cargo.toml  README.md
crates/testutil/src/: lib.rs
crates/tx/: Cargo.toml  README.md
crates/tx/src/: lib.rs
crates/wallet/: Cargo.toml  README.md
crates/wallet/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT_PREP.md  COMMUNICATIONS_POLICY.md  DISCLAIMER.md  FUNDING.md  GOVERNANCE.md  INVARIANTS.md  Information G  KEY_MANAGEMENT.md  LAUNCH_CHECKLIST.md  MATURITY_MODEL.md  OMNIBUS_Framework.md  OPERATIONS.md  OPERATIONS_RUNBOOK.md  ORACLE_DESIGN.md  POBW_SPEC.md  PROPOSAL_TEMPLATE.md  README-Conquest.md G  RISK.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  SECURITY_TESTING_PLAN.md  THREAT_MODEL.md  TOKENOMICS.md  TOKEN_UTILITY_MATRIX.md  telemetry-initiative-execution.md  wallet-architecture.md
docs/ Folder Files docs/: REVENUE_100_TRILLION.md
docs/ Folder Files docs/docs/: FINAL_STATUS.md  Information U1
docs/docs/: FINAL_STATUS.md  Information Final Version
examples/dapp/: dapp.js  index.html
github/workflows/: License  ci.yml  telemetry-progress.yml  workflow
internal/version/: version.go
mobile-data-extraction/: Makefile  PROJECT_OVERVIEW.md  README.md  requirements.txt
mobile-data-extraction/config/: extraction-config.yaml
mobile-data-extraction/docs/: architecture.md  data-sources.md
mobile-data-extraction/src/: extractor.py  observer.py
mobile-data-extraction/tests/: test_extractor.py
oracle/node/: main.go
pan_computational/: README.md
pan_computational/network_exhaust/: ip_leasing.py
pan_computational/network_exhaust/energy_layer/: vpp_negawatts.py
revenue_extensions/: README.md  README.md 2
revenue_extensions/revenue_extensions/: ai_scraping.py  ai_scraping.py 2
risk/: RISK_REGISTER.md
script/: DeployAll.s.sol
script/helpers/: AddressWriter.s.sol
scripts/: post-deploy-checklist.sh
security/quantum/: Cargo.toml  README.md  pq_envelope.rs
solver/: solver.py 4
solver/l3/: deploy_l3.sh
src/: block.rs  constants.rs  hash.rs  lib.rs  main.rs  merkle.rs  transaction.rs  tx.rs  validation.rs
src/distribution/: FixedPriceSale.sol  MerkleAirdrop.sol  VestingVault.sol
src/funding/: EscrowMilestoneVault.sol
src/governance/: HorizGovernor.sol  ParameterChangeModule.sol  PauseModule.sol  TimelockController.sol
src/libs/: HorizErrors.sol  HorizMath.sol
src/token/: HorizCoinToken.sol
src/treasury/: HorizTreasury.sol  RateLimitedTreasuryAdapter.sol
(+36 files in other folders)
