[package]
name = "horizcoin"
version = "0.1.0"
edition = "2021"
description = "Core data model and validation for HorizCoin blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thehorizonholding/HorizCoin"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
proptest = "1.0"