[package]
name = "horizcoin-node"
description = "HorizCoin blockchain node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "horizcoin-node"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true