[package]
name = "horizcoin-block"
description = "Block structure and validation for HorizCoin"
keywords = ["block", "blockchain", "validation"]
categories = ["cryptography"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
