[package]
name = "horizcoin-block"
description = "Block structures and validation for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]