[package]
name = "horizcoin-codec"
description = "Encoding and decoding utilities for HorizCoin data structures"
keywords = ["encoding", "decoding", "serialization"]
categories = ["encoding"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

