[package]
name = "horizcoin-codec"
description = "Serialization and encoding utilities for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
horizcoin-primitives = { workspace = true }
sha2 = { workspace = true }