[package]
name = "horizcoin-consensus"
description = "Consensus algorithm implementation"
keywords = ["consensus", "blockchain", "algorithm"]
categories = ["algorithms"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
