[package]
name = "horizcoin-crypto"
description = "Cryptographic utilities and primitives for HorizCoin"
keywords = ["cryptography", "blockchain", "crypto"]
categories = ["cryptography"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
