[package]
name = "horizcoin-crypto"
description = "Cryptographic primitives and utilities for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }
k256 = { workspace = true }
bech32 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
horizcoin-primitives = { workspace = true }
rand = "0.8"