[package]
name = "horizcoin-mempool"
description = "Memory pool for pending transactions"
keywords = ["mempool", "transaction", "pool"]
categories = ["cryptography"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

