[package]
name = "horizcoin-merkle"
description = "Merkle tree implementation for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
horizcoin-primitives = { workspace = true }
horizcoin-crypto = { workspace = true }