[package]
name = "horizcoin-rpc"
description = "RPC server and client implementation"
keywords = ["rpc", "api", "server"]
categories = ["network-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

