[package]
name = "horizcoin-state"
description = "State management and transitions for HorizCoin"
keywords = ["state", "blockchain", "consensus"]
categories = ["database-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
