[package]
name = "horizcoin-storage"
description = "Storage backend for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
horizcoin-primitives = { workspace = true }
horizcoin-codec = { workspace = true }
rocksdb = { workspace = true }
tempfile = { workspace = true }