[package]
name = "horizcoin-testutil"
description = "Testing utilities and helpers"
keywords = ["testing", "utilities", "helpers"]
categories = ["development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
