[package]
name = "horizcoin-tx"
description = "Transaction types and validation logic"
keywords = ["transaction", "blockchain", "validation"]
categories = ["cryptography"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
