[package]
name = "horizcoin-tx"
description = "Transaction structures and verification for HorizCoin blockchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
horizcoin-primitives = { workspace = true }
horizcoin-crypto = { workspace = true }
horizcoin-codec = { workspace = true }