[package]
name = "horizcoin-wallet"
description = "Wallet functionality and key management"
keywords = ["wallet", "keys", "cryptocurrency"]
categories = ["cryptography"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true
